--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^2.0.8
+  flutter_markdown: ^0.6.8
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
